; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/be2iscsi/extr_be_main.c_beiscsi_hdl_put_handle.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/be2iscsi/extr_be_main.c_beiscsi_hdl_put_handle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hd_async_context = type { i32 }
%struct.hd_async_handle = type { i32, i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hd_async_context*, %struct.hd_async_handle*)* @beiscsi_hdl_put_handle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @beiscsi_hdl_put_handle(%struct.hd_async_context* %0, %struct.hd_async_handle* %1) #0 {
  %3 = alloca %struct.hd_async_context*, align 8
  %4 = alloca %struct.hd_async_handle*, align 8
  store %struct.hd_async_context* %0, %struct.hd_async_context** %3, align 8
  store %struct.hd_async_handle* %1, %struct.hd_async_handle** %4, align 8
  %5 = load %struct.hd_async_handle*, %struct.hd_async_handle** %4, align 8
  %6 = getelementptr inbounds %struct.hd_async_handle, %struct.hd_async_handle* %5, i32 0, i32 3
  store i64 0, i64* %6, align 8
  %7 = load %struct.hd_async_handle*, %struct.hd_async_handle** %4, align 8
  %8 = getelementptr inbounds %struct.hd_async_handle, %struct.hd_async_handle* %7, i32 0, i32 2
  store i64 0, i64* %8, align 8
  %9 = load %struct.hd_async_handle*, %struct.hd_async_handle** %4, align 8
  %10 = getelementptr inbounds %struct.hd_async_handle, %struct.hd_async_handle* %9, i32 0, i32 1
  store i64 0, i64* %10, align 8
  %11 = load %struct.hd_async_handle*, %struct.hd_async_handle** %4, align 8
  %12 = getelementptr inbounds %struct.hd_async_handle, %struct.hd_async_handle* %11, i32 0, i32 0
  %13 = call i32 @list_del_init(i32* %12)
  ret void
}

declare dso_local i32 @list_del_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
